--- a/CollectionViewPopupTest/Pages/Popups/CollectionViewPopup.xaml
+++ b/CollectionViewPopupTest/Pages/Popups/CollectionViewPopup.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CollectionViewPopupTest.Pages.Popups.CollectionViewPopup">
 
-    <Frame BackgroundColor="White">
+    <Border BackgroundColor="White" HeightRequest="500" WidthRequest="400" Padding="0" HorizontalOptions="Center" VerticalOptions="Center"> 
+        <Border.StrokeShape>
+            <RoundRectangle CornerRadius="8" />
+        </Border.StrokeShape>
         <VerticalStackLayout>
             <HorizontalStackLayout >
                 <Label Text="{Binding Title}"/>
@@ -21,5 +24,5 @@
             </CollectionView>
 
         </VerticalStackLayout>
-    </Frame>
+    </Border>
 </ContentView>
